--- a/src/html/docs.html
+++ b/src/html/docs.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8"/>
     <title>Tumry</title>
-    <link rel="stylesheet" type="text/css" href="./assets/style.css" />
+    <link rel="stylesheet" type="text/css" href="../assets/style.css" />
   </head>
   <body>
       <div class="top">
@@ -32,9 +32,6 @@ const electron = require("electron");
         document.querySelector('.close').addEventListener('click', function() {
             IPC.send("swapMain")
           });
-              function opendocs(){
-                IPC.send('swapDocs');
-              }
     </script>
   </body>
 </html>
