--- a/src/html/docs.html
+++ b/src/html/docs.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
   <head>
     <meta charset="UTF-8"/>
@@ -16,7 +16,8 @@
         <div class="content">
           <p class="howto">
             <br><b>Setup</b><br>
-            Before you use Turmy make sure to configure him. You will need to set the webhook token and ID in your config file.<br><br>
+            Before you use Turmy make sure to configure him. You will need to set the webhook URL in your config file.<br><br>
+            Makse sure to set the webhook username in the config file.<br><br>
             Use the guide <a onclick="openExternalLink('https://gist.github.com/OtisGoodman/9e17909a046fbce21d193efc796c3330')" class="link" target="_blank">here</a> for info on creating a webhook
             <br><br>
             </p>
