--- a/src/html/main.html
+++ b/src/html/main.html
@@ -19,43 +19,37 @@
         <input type="text" name="msg"  id = "input" class = 'msg' title="Turmy Message" inputsize ="50px" placeholder="Turmy Message"><br>
           </div>
           <div class="footer">
-            <p><a onclick="redirect('Docs')" class="link">docs</a><spacer><a class="link" onclick="redirect('Config')">config</a><spacer><a class="link" onclick="openExternalLink('https://github.com/OtisGoodman/Turmy')">github</a></p>
+            <p><a onclick="redirect('Docs')" class="link">docs</a><space><a class="link" onclick="redirect('Config')">config</a><space><a class="link" onclick="openExternalLink('https://github.com/OtisGoodman/Turmy')">github</a></p>
           </div>
         </div>
       </div>
     <script>
         const electron = require("electron");
         const IPC = electron.ipcRenderer;
-        var shell = require("electron").shell;
-        const storage = require('../storage.js')
-        isConfigWriten()
+        const shell = require("electron").shell;
+        const storage = require('../storage.js');
+
         document.querySelector('.close').addEventListener('click', function() {
             IPC.send('closeMain');
           });
-
           function openExternalLink(url) {
             shell.openExternal(url)
             }
-
           function redirect(page){
             IPC.send(`swap${page}`);
           }
-
-        function isConfigWriten() {
-          if (storage.get("url") == "undefined" || storage.get("username" == "undefined")){
-            document.getElementById("input").className = "msg-d";
-            document.getElementById("input").disabled = true;
-          }else{
-            document.getElementById("input").className = "msg";
-            document.getElementById("input").disabled = false;
+            if (storage.get('url') == "Webhook URL"){
+              document.getElementById("input").className = "msg-d";
+              document.getElementById("input").disabled = true;
+              document.getElementById("input").placeholder = "Error! Please Configure!"
           }
-        }
 
 
 
         function clearStorage() {
-          storage.clear("url")
-          storage.clear("username")
+          storage.set("url","Webhook URL")
+          storage.set("username","Webhook Username")
+          storage.set("avatarUrl","https://i.imgur.com/aSqkpCU.png")
         }
     </script>
   </body>
